force-app/main/default/objects/Bike__c/fields/Bike_Status__c.field-meta.xml
<CustomField>
    <fullName>Bike_Status__c</fullName>
    <label>Bike Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Service Due</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>