force-app/main/default/objects/Bike__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>